# DataService/swagger.json
@@ -403,6 +403,38 @@
         }
       }
     },
+    "/data/manual-checkpoint": {
+      "post": {
+        "tags": [
+          "Data"
+        ],
+        "operationId": "Data_ManualCheckpoint",
+        "parameters": [
+          {
+            "name": "riderId",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/octet-stream": {
+                "schema": {
+                  "type": "string",
+                  "format": "binary"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/data/upstream": {
       "post": {
         "tags": [
